--- a/Src/packages.config
+++ b/Src/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Mapster" version="4.0.0" targetFramework="net461" />
+  <package id="Mapster.EF6" version="1.0.0" targetFramework="net461" />
   <package id="Mapster.JsonNet" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net461" />
