--- a/Src/packages.config
+++ b/Src/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="EntityFramework.SqlServerCompact" version="6.2.0" targetFramework="net461" />
   <package id="Mapster" version="4.0.0" targetFramework="net461" />
   <package id="Mapster.EF6" version="1.0.0" targetFramework="net461" />
   <package id="Mapster.JsonNet" version="1.0.0" targetFramework="net461" />
@@ -12,6 +13,7 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="Ninject" version="3.3.4" targetFramework="net461" />
